--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -1,10 +1,11 @@
 pipeline {
     agent any
 
-    tools {
-        jdk 'jdk-21'
-        maven 'maven-3.9.6'
-    }
+tools {
+    jdk 'Default'
+    maven 'Default'
+}
+
 
     stages {
         stage('Checkout') {
